Fix button spacing
- change margin-right of the Next button on BasewizardPage so that
the button aligns with the content of the page
- change margin-right of the Import From CSV button so that the button
aligns with the right edge of the table below

--- a/src/styles/components/wizard.less
+++ b/src/styles/components/wizard.less
@@ -158,7 +158,7 @@
 
 .wizard-content-container.hasHeader{
   .footer-container {
-    margin-right: 15px;
+    margin-right: 20px;
   }
 }
 
